# video_translate_voiceover

./: .gitignore  README.md  main.py  pyproject.toml
data/output/: text_short_video_translated_en.txt
data/output/transcript_whisper_large/: audio_short_video_ptbr.json  audio_short_video_ptbr.srt  audio_short_video_ptbr.tsv  audio_short_video_ptbr.txt  audio_short_video_ptbr.vtt
notebooks/: 01_load_and_validte_raw_data.ipynb  02_transcribe_audio.ipynb  03_translate_text.ipynb  04_text_to_speech.ipynb
src/: data.py  paths.py  text_to_speech.py  transcribe.py  translate.py
