[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo Mescoki Sarti <gmsarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
jupyter = "^1.0.0"
pydub = "^0.25.1"
moviepy = "^1.0.3"
transformers = "^4.38.2"
torch = {version = "^2.2.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.17.1+cpu", source = "pytorch_cpu"}
accelerate = "^0.28.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
