[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo Mescoki Sarti <gmsarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pathlib = "^1.0.1"
jupyter = "^1.0.0"
pydub = "^0.25.1"
moviepy = "^1.0.3"
torch = {version = "^2.2.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.17.1+cpu", source = "pytorch_cpu"}
accelerate = "^0.28.0"
openai-whisper = "^20231117"
googletrans = "3.1.0a0"
tts = "^0.22.0"
nltk = "^3.8.1"
requests = "^2.31.0"
transformers = "^4.39.1"
pyttsx3 = "^2.90"
datasets = {extras = ["audio"], version = "^2.18.0"}
sentencepiece = "^0.2.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
